Fixed Another Layout Break

--- a/synerge-reader-frontend/src/App.css
+++ b/synerge-reader-frontend/src/App.css
@@ -56,7 +56,7 @@ margin-bottom: 0px
 .headingInfo{
 display: flex;
 flex-direction: row ;
-gap: 40px;
+
 
 }
 
@@ -138,6 +138,7 @@ margin-left: auto;
 .headingInfo{
   display: flex;
   align-items: center;
+  width: 100%;
 }
 
 
@@ -373,15 +374,15 @@ width: 200px;
 }
 
 .modal-content {
- 
   background: white;
   border-radius: 8px;
-  padding: 30px;
-  min-width: 400px;
+ 
+  min-width: 900px;
+  height: 100%;
   width: 90%;
   overflow-y: auto;
   box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-  animation: modalSlideIn 0.3s ease-out;
+ 
 
 
 }
