--- a/synerge-reader-frontend/src/GridApp.css
+++ b/synerge-reader-frontend/src/GridApp.css
@@ -88,7 +88,6 @@ padding: 2px;
     margin-top: -30px;
 margin-bottom: 15px;
 
-
 }
 
 
@@ -115,6 +114,7 @@ padding: 5px;
 }
 
 
+
 .main-text-Box{
 margin-top: auto;
 position: relative;
@@ -127,6 +127,14 @@ border-radius: 10px;
 margin-top: auto;
 width: 100%;
 height: 110px
+}
+.modal-overlay {
+
+}
+.modal-content {
+    
+    margin-top: -85px;
+    min-width: 100px;
 }
 
 
